# mcp-shield-pii

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
documentation/: TESTING.md
src/mcp_shield_pii/: __init__.py  cli.py  compliance.py  pipeline.py  webhooks.py
src/mcp_shield_pii/audit/: __init__.py
src/mcp_shield_pii/concurrency/: __init__.py
src/mcp_shield_pii/config/: __init__.py  loader.py  watcher.py
src/mcp_shield_pii/dashboard/: __init__.py
src/mcp_shield_pii/detection/: __init__.py  base.py  context_scorer.py  nlp_engine.py  regex_engine.py
src/mcp_shield_pii/masking/: __init__.py  reversible.py  strategies.py
src/mcp_shield_pii/metrics/: __init__.py
src/mcp_shield_pii/proxy/: __init__.py  stdio_proxy.py
tests/unit/: test_config_and_scorer.py  test_interceptor.py  test_masking.py  test_regex_engine.py
